# Canopticon

./: .gitignore  README.md  agents.md  canopticon.py  pyproject.toml
backend/: __init__.py  cli.py  inference.py  maps.py  models.py  settings.py  storage.py  web.py
backend/plugins/: __init__.py  base.py  manager.py
backend/plugins/Pi4B/: __init__.py  led_helper.py  plugin.py  runtime.py
client/: app.js  index.html  styles.css
device/: gpio_trigger_helper.py
docs/: architecture.md  offline-maps.md  pi-appliance-networking.md
frontend/: app.js  index.html  styles.css
